# helixir

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  helixir.md
.github/workflows/: claude-code-review.yml
helixir-cli/: Cargo.toml  README.md
helixir-cli/lesson_answers/: lesson10_queries.hx  lesson11_queries.hx  lesson12_queries.hx  lesson13_queries.hx  lesson14_queries.hx  lesson15_queries.hx  lesson16_queries.hx  lesson17_queries.hx  lesson18_queries.hx  lesson19_queries.hx  lesson1_schema.hx  lesson20_queries.hx  lesson21_queries.hx  lesson22_queries.hx  lesson23_queries.hx  lesson24_queries.hx  lesson2_schema.hx  lesson3_schema.hx  lesson4_schema.hx  lesson6_queries.hx  lesson7_queries.hx  lesson8_queries.hx  lesson9_queries.hx
helixir-cli/query_answers/: lesson14.json  lesson17.json  lesson19.json  lesson21.json  lesson22.json  lesson23.json  lesson5.json  lesson6.json  lesson7.json  lesson8.json  lesson9.json
helixir-cli/src/: app.rs  cli.rs  formatter.rs  lesson_types.rs  lessons.rs  main.rs  ui.rs  validation.rs
helixir-cli/src/validation/: executor.rs  instance.rs  query.rs  schema.rs  types.rs  utils.rs
helixir-macros/: Cargo.toml
helixir-macros/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
query_answers/: lesson10.json  lesson11.json  lesson12.json  lesson13.json  lesson15.json  lesson16.json  lesson17.json  lesson18.json  lesson19.json  lesson20.json  lesson24.json  lesson8.json
src/: app.rs  formatter.rs  lesson_types.rs  lessons.rs  main.rs
src/validation/: executor.rs  instance.rs  mod.rs  query.rs  schema.rs  types.rs  utils.rs
