[package]
name = "helixir-macros"
version = "0.1.2"
edition = "2024"
description = "Interactive CLI tutorial for learning HelixDB"
license = "MIT"
repository = "https://github.com/HelixDB/helixir"
keywords = ["database", "graph", "tutorial", "helix", "cli"]
categories = ["command-line-utilities", "database", "games"]
authors = ["Putt <putt@helix-db.com>", "HelixDB <founders@helix-db.com>"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.1", features = ["full"] }
quote = "1.0.37"
proc-macro2 = "1.0.95"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.130"